--- a/GraphQLDemoWebApp/src/app/pages/employee/employee.component.html
+++ b/GraphQLDemoWebApp/src/app/pages/employee/employee.component.html
@@ -1,5 +1,5 @@
 <ul>
-  <li *ngFor="let employee of employees" (click)="employeeProfile(employee.employeeNumber)">
+  <li class="employee-list" *ngFor="let employee of employees" (click)="employeeProfile(employee.employeeNumber)">
     {{ employee.employeeNumber }} - {{ employee.firstName }}
     {{ employee.lastName }}
   </li>
