--- a/GraphQLDemoWebApp/src/app/pages/employee-profile/employee-profile.component.css
+++ b/GraphQLDemoWebApp/src/app/pages/employee-profile/employee-profile.component.css
@@ -1,10 +1,10 @@
-.back-link{
-    text-decoration: none;
-    color:blue
+.back-link {
+  text-decoration: none;
+  color: blue;
 }
 
-.back-link:hover{
-    color: blueviolet;
+.back-link:hover {
+  color: blueviolet;
 }
 
 .block-heading {
@@ -19,11 +19,26 @@
   justify-content: flex-end;
   align-items: center;
   font-weight: 500;
+  min-width: 130px;
 }
 
 .value {
-  padding-left:6px;
+  padding-left: 6px;
   border: 1px solid grey;
   min-width: 250px;
+  max-width: 250px;
+  color: black;
   box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.5);
+}
+
+.space-above-16 {
+  margin-top: 16px;
+}
+
+.form-field{
+    margin-right:8px;
+}
+
+.myInput{
+  cursor: not-allowed; /* Show not-allowed cursor */
 }
